backend/tests/requests/snapshots/can_register@user_request-2.snap
---
source: tests/requests/user.rs
assertion_line: 55
expression: user_response
snapshot_kind: text
---
{
  "id": ID,
  "email": "can.register@financrr.test",
  "name": "TestUer",
  "flags": 2,
  "email_verification_sent_at": "DATEZ",
  "email_verified_at": null,
  "created_at": "DATEZ",
  "updated_at": "DATEZ"
}
