backend/tests/requests/snapshots/can_reset_password@user_request.snap
---
source: tests/requests/user.rs
assertion_line: 130
expression: user_response
snapshot_kind: text
---
{
  "id": ID,
  "email": "can.reset.password@financrr.test",
  "name": "Test Account",
  "flags": 2,
  "email_verification_sent_at": null,
  "email_verified_at": "DATEZ",
  "created_at": "DATEZ",
  "updated_at": "DATEZ"
}
